добавил резину + слоган

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				<!-- <p class="welcome">Welcome <span>to the gargeous</span></p>
 				<p class="slogan-main">Sedona</p>
 				<p class="quote">Because the Grand Canyon sucks!</p> -->
-
-				<img src="img/index-bg-photo-full.jpg" width="1200" height="773" alt="Краевид Седоны">
+				
+				<img class="slogan-img" src="img/slogan.png" width="458" height="352" alt="Седона - потому что Великий каньон отстой">
 				<img class="mask" src="img/index-bg-photo-mask.png" width="1200" height="57" alt="">
 
 			</section>
